k8s/env/00-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    nslabel: devns
  name: devns
spec: {}
status: {}
